Create ColumnDescriptionDTO and GameRulesDTO to isolate technical and functional uses. Improve sheet reader methods